k8s/05_nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/ar3ee3arcs/django-nginx:latest
          volumeMounts:
            - name: static-volume
              mountPath: /app/staticfiles
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
